# snakerun

./: .gitignore  README.md  pyproject.toml  readme.md
examples/: nodep_example.py  pep_example_script.py  prefab_demo.py  requires_gt_39.py  requires_nothing.py  requires_py310.py  requires_py311.py  requires_py36.py  requires_py39.py
perf/: parse_dependencies.py
rust/: Cargo.toml
rust/src/: lib.rs  pep722_parser.rs  pep_722_parser.rs
src/: snakerun.py
src/snakerun/: __init__.py  __main__.py  build_env.py  constants.py  core.py  entrypoint_hack.py  exceptions.py
src/snakerun/internals/: __init__.py  cli_parser.py  config.py  pep722_parser.py  pep_722_parser.py
tests/: test_spec.py
