[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name="SnakeRun"
description="Python script runner that handles dependencies"
authors = [
  { name="David C Ellis" },
]
readme="README.md"
requires-python = ">=3.10"
dependencies = [
    "distlib",
    "packaging",
    "prefab-classes",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dynamic = ['version']

[project.scripts]
snakerun = "snakerun:main"

[project.optional-dependencies]
TEST = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "snakerun.__version__"}

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "snakerun.internals._internals_rs"
python-source = "src"
